@@ -117,20 +117,33 @@
                         android:layout_below="@id/layoutUserDetail"
                         android:layout_marginTop="10dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <FrameLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/txt_add_car"
-                        android:text="@string/add_car"
-                        android:layout_below="@+id/recycler_view"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"
-                        android:textSize="18sp"
-                        android:drawableLeft="@drawable/ic_add"
-                        android:drawablePadding="5dp"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_below="@+id/recycler_view">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/txt_add_car"
+                            android:text="@string/add_car"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="15dp"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textStyle="bold"
+                            android:textSize="18sp"
+                            android:drawableLeft="@drawable/ic_add"
+                            android:drawablePadding="5dp"
+                            android:layout_marginBottom="10dp"/>
+
+                        <ProgressBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/progressBar"
+                            android:layout_gravity="center"
+                            android:visibility="gone"/>
+                    </FrameLayout>
+
 
                 </RelativeLayout>
 
