@@ -218,6 +218,13 @@
 
                 </FrameLayout>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/please_wait"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/txt_wait"
+                    android:visibility="gone"/>
                 </LinearLayout>
 
             </LinearLayout>
