@@ -45,8 +45,7 @@
     <string name="chat">Chat</string>
     <string name="cant_chat_youself">You can\'t chat with yourself</string>
     <string name="choose_car_title">Choose your active car</string>
-    <string name="choose_car_id_number">Choose car id number</string>
-    <string name="to_your_active_car">\nto your active car?</string>
+    <string name="choose_car_id_number">Choose this car for chatting?</string>
     <string name="confirm">Confirm</string>
     <string name="please_verify_dialog_title">Your car is not verified</string>
     <string name="please_verify_dialog">For the safety of everyone please verify your car. if you don\'t, you still can use the app but your \"unverified car\" status will show to other</string>
@@ -96,6 +95,9 @@
     <string name="this_user_is_not_verify">You are talking with unverified car, you may ask for evidence like car photo or location photo for both confidence</string>
     <string name="admin">Admin</string>
     <string name="car_id_in_verify">Car id</string>
+    <string name="noti_from_system">Notification from system</string>
+    <string name="please_wait">Please wait for a moment...</string>
+
 
 
     //Toast
